<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="#FDECF2"
       >

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/black_melody"
            android:text="@string/welcome_to_alc_4_0"
            android:textColor="#000000"
            android:textSize="60sp" />

        <Button
            android:id="@+id/aboutALC"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="79dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/about_alc"
            android:textColor="#000000"

            />

        <Button
            android:id="@+id/myProfile"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutALC"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/my_profile"
            android:textColor="#000000" />
    </RelativeLayout>



</FrameLayout>